[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Emil.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.904301
height = 0.002

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 0, -1, 20, -8, -1, 0, 8, -1, 0, 0, 2, 20, 8, 2, 0, -8, 2, 0 )

[sub_resource type="SphereShape" id=6]
radius = 23.3782

[sub_resource type="CapsuleMesh" id=5]

[node name="Emil" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.713729, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Eyes" type="Area" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Eyes"]
shape = SubResource( 4 )

[node name="Ears" type="Area" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ears"]
shape = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24917, -0.720291 )
mesh = SubResource( 5 )

[node name="FakeEyes" type="Spatial" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Eyes" to="." method="_on_Eyes_body_entered"]
[connection signal="body_exited" from="Eyes" to="." method="_on_Eyes_body_exited"]
[connection signal="body_entered" from="Ears" to="." method="_on_Ears_body_entered"]
[connection signal="body_exited" from="Ears" to="." method="_on_Ears_body_exited"]
